Added components to front and bug fixes on back.
